Version 1.0.2 - 2009-05-11
* Some bug fixes (see mercurial logs for details)

Version 1.0.1 - 2008-12-01
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release