@@ -1,3 +1,5 @@
+* Use the right currency to compute  balance, debit/credit of accounts
+
 Version 1.0.2 - 2009-05-11
 * Some bug fixes (see mercurial logs for details)
 
